add jquery first few example

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>JavaScript Material Review Examples</h1>
     <h2>Subtitle</h2>
+    <h3>Number of likes: <span>13</span></h3>
+    <button>LIKE</button>
     <p>Paragraph</p>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
