--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>JavaScript Material Review Examples</h1>
+    <div id="box-container"></div>
     <h2>Subtitle</h2>
     <h3>Number of likes: <span>13</span></h3>
     <button>LIKE</button>
